--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "lint": "eslint --ext .js,.ts .",
-    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
+    "instructions": "mdx-deck instructions.mdx"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "jest": "^27.5.1",
+    "mdx-deck": "^4.1.1",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
