--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,10 @@
     "lib": ["es2021"],
     "module": "commonjs",
     "target": "es2021",
-
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
-  }
+  },
+  "exclude": ["./node_modules/"]
 }
