--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "autoformat": "npm run lint && npm run format",
-    "instructions": "mdx-deck instructions.mdx"
+    "instructions": "mdx-deck instructions.mdx",
+    "instructions:build": "mdx-deck build instructions.mdx"
   },
   "author": "",
   "license": "ISC",
