--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "autoformat": "npm run lint && npm run format",
-    "instructions": "mdx-deck instructions.mdx",
-    "instructions:build": "mdx-deck build instructions.mdx"
+    "instructions": "reveal-md instructions.md",
+    "instructions:build": "reveal-md instructions.md --static public/"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +21,8 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "jest": "^27.5.1",
-    "mdx-deck": "^4.1.1",
     "prettier": "^2.5.1",
+    "reveal-md": "^5.3.2",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   }
